# RELAY

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
relay/: __init__.py  cli.py  config.py  models.py  pipeline.py  store.py
relay/collectors/: base.py  browser.py  instagram.py  mbs.py  runner.py  xpublic.py
relay/ingest/: campaign.py  supervisor.py
relay/matching/: engine.py  normalize.py
relay/report/: crosscheck.py  generator.py
relay/resolve/: heuristic.py  rules.py
relay/web/: app.py
relay/web/static/: app.js  index.html  style.css
tests/: conftest.py  test_batch.py  test_collectors.py  test_duplicate_no.py  test_e2e.py  test_empty_caption.py  test_generator.py  test_ingest.py  test_matching_rules.py  test_normalize.py  test_web.py
